fixed footer, finalized about page

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Fonts -->
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">		
 		<link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
 		<!-- Link to CSS -->
 		<link rel="stylesheet" href="main.css">
@@ -14,7 +14,9 @@
 		<!-- Lightbox Files -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
-		
+		<!-- Icons -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="icon" href="images/icon.png">
 	</head>
 	<body>
 		<div class="splash">
@@ -290,20 +292,36 @@
 
 		<!-- Footer -->
 		<footer class="page-footer">
-			<div class="row socials">
-				<a href="mailto:jennifer.tsai11@gmail.com" target="_blank">
-					<img src="images/email-icon.png" alt="email icon">
-				</a>
-				<a href="https://www.linkedin.com/in/jennifertsaii/" target="_blank">
-					<img src="images/linkedin-icon.png" alt="linkedin logo icon">
-				</a>
-				<a href="https://www.instagram.com/jennifertsaii/" target="_blank">
-					<img src="images/instagram-icon.png" alt="instagram logo icon">
-				</a>
-				<a href="https://github.com/jennifertsai" target="_blank">
-					<img src="images/github-icon.png" alt="github logo icon">
-				</a>
-			</div>
+			<div class="socials container">
+				<!-- Social buttons -->
+				<ul class="list-unstyled list-inline text-center">
+				<li class="list-inline-item">
+					<a href="mailto:jennifer.tsai11@gmail.com"  target="_blank" class=" mx-1">
+					<i class="fa fa-envelope"> </i>
+					</a>
+				</li>
+				<li class="list-inline-item">
+					<a href="https://www.linkedin.com/in/jennifertsaii/" target="_blank" class="mx-1">
+					<i class="fa fa-linkedin"> </i>
+					</a>
+				</li>
+				<li class="list-inline-item">
+					<a href="https://www.instagram.com/jennifertsaii/" target="_blank" class="mx-1">
+					<i class="fa fa-instagram"> </i>
+					</a>
+				</li>
+				<li class="list-inline-item">
+					<a href="https://github.com/jennifertsai" target="_blank" class="mx-1">
+					<i class="fa fa-github"> </i>
+					</a>
+				</li>
+				<li class="list-inline-item">
+					<a href="https://drive.google.com/file/d/1kgZ-wXe9-ajS6LQJBJ_fdkdvkINd8y_w/view?usp=sharing" target="_blank" class="mx-1">
+					<i class="fa fa-file-text"> </i>
+					</a>
+				</li>
+				</ul>
+				</div>		
 			<!-- Copyright -->
 			<div class="footer-copyright text-center py-3">made with ❤ by jennifer tsai © 2020
 		</footer>
