--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Fonts -->
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">		
 		<link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
 		<!-- Link to CSS -->
 		<link rel="stylesheet" href="main.css">
 		<!-- Load Bootstrap via CND -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<!-- Icons -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="icon" href="images/icon.png">
 	</head>
 	<body>
 		<div class="splash">
@@ -98,9 +101,9 @@
 				<div class="inner">
 					<h2><br><i><span class="highlight-orange">"stop and watch the sunset"</span></i></h2>
 					<p>
-						I'm on a life-long journey of discovery. Not only about the world, but also of myself. In a world that's always hustling, it is important for me to take the time to reflect on how much I've grown and accomplished, and to appreciate all the experiences that have molded me into the person I am today—much like taking in the beauty of a sunset. My best ideas, I've realized, come out once the sun has set; when the world around me as slowed itself down.				<br><br>
-						I'm hoping this website can serve as a living documentation of my sunset-induced ideas and my adventure of becoming the person I aspire to be: through shaping my personal values, relationships, and career aspirations. I invite you to join me! 😊			
-					</p>
+						I'm on a life-long journey of discovery. Not only about the world, but also of myself. In a world that's always hustling, it's important for me to sit back and reflect on how much I've grown and accomplished. Appreciating all of people, places, and experiences that have molded me into the person I am today is much like taking in a sunset - there is beauty if you stop and look at it. I've noticed my best ideas come out once the sun has set, as if there is something liberating when the world around me as slowed itself down.
+						<br><br>
+						I hope this website can serve as a living documentation of my sunset-induced ideas and my personal + professional growth. I invite you to join me as I embark on this adventure of painting my own awe-inspiring palette of colours across the sky of my life. 💕					</p>
 				</div> <!-- /.inner -->
 			</div> <!-- /.sunset-description -->
 			<div class="wave-container">
@@ -206,10 +209,10 @@
 						</div>
 						<div class="tab-pane fade" id="pills-3" role="tabpanel" aria-labelledby="pills-3-tab">
 							<div class="card-body row">
-								<div class="col-sm-2 ">
+								<div class="col-sm-3 ">
 									<img src="images/focus-philantrophy.png" alt="two hands held together" class="img-fluid focus-image">
 								</div>
-								<div class="col-sm-10 ">
+								<div class="col-sm-9 ">
 									<p>
 										Unlike charity, which addresses the symptoms of social problems, philanthropy is about <b><span class="highlight-orange">addressing the root causes.</span></b> Instead of one-time donations, my goal is persistent and sustained action, direct connection, and education (for myself, and others).
 										<br><br>
@@ -225,7 +228,7 @@
 								</div>
 								<div class="col-sm-9 ">
 									<p>
-										My goal is to <b><span class="highlight-orange">fall in love with problems, not solutions.</span></b> In a rapidly advancing technological era, we are urged to problem solve, often without understanding the whole system of the problem; we create immediate innovations for the sake of innovation.
+										My goal is to <b><span class="highlight-orange">fall in love with problems, not solutions.</span></b> In a rapidly advancing technological era, we are urged to problem solve, often without understanding the whole system of the problem; we create immediate innovations for the sake of innovation. Technology doesn't solve problems, people do.
 										<br><br>
 										To create solutions that will genuinely improve people's lives, I'm working on going out to the real world to put myself in the contexts of real people—empathizing. I people watch. I dabble in humanities & science to discover and comprehend the vast expanse of the world, and engineering & tech to acquire the tools to design unique solutions. Through all of this, I continously question my ideas, our current systems & how we interact with them.
 									</p>
@@ -300,20 +303,36 @@
 
 			<!-- Footer -->
 			<footer class="page-footer">
-				<div class="row socials">
-					<a href="mailto:jennifer.tsai11@gmail.com" target="_blank">
-						<img src="images/email-icon.png" alt="email icon">
-					</a>
-					<a href="https://www.linkedin.com/in/jennifertsaii/" target="_blank">
-						<img src="images/linkedin-icon.png" alt="linkedin logo icon">
-					</a>
-					<a href="https://www.instagram.com/jennifertsaii/" target="_blank">
-						<img src="images/instagram-icon.png" alt="instagram logo icon">
-					</a>
-					<a href="https://github.com/jennifertsai" target="_blank">
-						<img src="images/github-icon.png" alt="github logo icon">
-					</a>
-				</div>
+  				<div class="socials container">
+					<!-- Social buttons -->
+					<ul class="list-unstyled list-inline text-center">
+					<li class="list-inline-item">
+						<a href="mailto:jennifer.tsai11@gmail.com"  target="_blank" class=" mx-1">
+						<i class="fa fa-envelope"> </i>
+						</a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://www.linkedin.com/in/jennifertsaii/" target="_blank" class="mx-1">
+						<i class="fa fa-linkedin"> </i>
+						</a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://www.instagram.com/jennifertsaii/" target="_blank" class="mx-1">
+						<i class="fa fa-instagram"> </i>
+						</a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://github.com/jennifertsai" target="_blank" class="mx-1">
+						<i class="fa fa-github"> </i>
+						</a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://drive.google.com/file/d/1kgZ-wXe9-ajS6LQJBJ_fdkdvkINd8y_w/view?usp=sharing" target="_blank" class="mx-1">
+						<i class="fa fa-file-text"> </i>
+						</a>
+					</li>
+					</ul>
+   				</div>		
 				<!-- Copyright -->
 				<div class="footer-copyright text-center py-3">made with ❤ by jennifer tsai © 2020
 			</footer>
