bug fixes and about page reformat

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">my life</a>
+							<a class="nav-link" href="blog.html">my life</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
@@ -50,12 +50,15 @@
 		<div class="about-me">
 			<div class="inner">
 				<h2>let me tell you about my story...</h2>
-				<p>
-					🙋‍♀️ At the core, I am an INFJ who is driven by both the curiosity to uncover the mysteries of the world and the calling the help others. 
-					<br><br>
-					💡 Fascinated by neuroscience, technology, creative design, nature, stories/books, lofi beats, delicious food, and deep conversations.					
-					<br><br>
-					🗻Seeking to solve tough problems, re-think what's possible, elevate others, and continuously hone my passions & interests.				</p>
+				<div class="about-intro-blurb">
+					<p>
+						🙋‍♀️ At the core, I am an INFJ who is driven by both the curiosity to uncover the mysteries of the world and the calling the help others. 
+					
+						Fascinated by neuroscience, technology, creative design, nature, stories/books, lofi beats, delicious food, and deep conversations.					
+						
+						Seeking to solve tough problems, re-think what's possible, elevate others, and continuously hone my passions & interests.				
+					</p>
+				</div>
 				<img src="images/about-intro-1.png">
 				<div class="row">
 					<div class="col-md-6">
