--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">my life</a>
+							<a class="nav-link" href="blog.html">my life</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
