--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">my life</a>
+							<a class="nav-link" href="blog.html">my life</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
@@ -268,7 +268,7 @@
 								<div class="card-body d-flex flex-column">
 									<h5 class="card-title">my book shelf </h5>
 									<p class="card-text">Training my curiousity muscle and getting back into my love of learning and discovering. Check out what I've been loving to read and think about during my downtime. </p>
-									<a href="https://www.notion.so/682511721f6544b8ac0b4305509426df?v=b5c8db829860477a83edb3f9e0576a67" class="btn stretched-link mt-auto">read with me</a>
+									<a href="https://www.notion.so/682511721f6544b8ac0b4305509426df?v=b5c8db829860477a83edb3f9e0576a67" target="_blank" class="btn stretched-link mt-auto">read with me</a>
 								</div>
 							</div>
 						</div>
@@ -277,8 +277,8 @@
 								<img class="card-img-top" src="images/checkthisout-food.png" alt="kitchen counter with recipe book and cooking utensils">
 								<div class="card-body d-flex flex-column">
 									<h5 class="card-title">my recipe book</h5>
-									<p class="card-text">Food's good, but homemade food is the best. Check out my favourite recipes! Oh, and don't forget to share with me, too :) </p>
-									<a href="https://www.notion.so/33f1281c22c1466aacab96440942ed06?v=e4073519724d444d938c58ad84b70165" class="btn stretched-link mt-auto">cook with me</a>
+									<p class="card-text">Recently, I have been trying my hand in the kitchen to make delicious homemade comfort food. Check out my favourite recipes! Oh, and don't forget to share some of your creations with me, too :) </p>
+									<a href="https://www.notion.so/33f1281c22c1466aacab96440942ed06?v=e4073519724d444d938c58ad84b70165" target="_blank" class="btn stretched-link mt-auto">cook with me</a>
 								</div>
 							</div>
 						</div>
