updated resume link

--- a/about.html
+++ b/about.html
@@ -52,11 +52,11 @@
 				<h2>let me tell you about my story...</h2>
 				<div class="about-intro-blurb">
 					<p>
-						🙋‍♀️ At the core, I am an INFJ who is driven by both the curiosity to uncover the mysteries of the world and the calling the help others. 
-					
-						Fascinated by neuroscience, technology, creative design, nature, stories/books, lofi beats, delicious food, and deep conversations.					
-						
-						Seeking to solve tough problems, re-think what's possible, elevate others, and continuously hone my passions & interests.				
+						<ul style="list-style-type:none; padding-left:0;">
+							<li>🙋‍♀️ At the core, I am an INFJ who is driven by both the curiosity to uncover the mysteries of the world and the calling the help others.</li>
+							<li>💡 Fascinated by neuroscience, technology, creative design, nature, stories/books, lofi beats, delicious food, and deep conversations.	</li>
+							<li>💭 Seeking to solve tough problems, re-think what's possible, elevate others, and continuously hone my passions & interests.</li>
+						  </ul>  
 					</p>
 				</div>
 				<img src="images/about-intro-1.png">
@@ -129,7 +129,7 @@
 			</a>
 		</li>
 		<li class="list-inline-item">
-			<a href="https://drive.google.com/file/d/1kgZ-wXe9-ajS6LQJBJ_fdkdvkINd8y_w/view?usp=sharing" target="_blank" class="mx-1">
+			<a href="Jennifer Tsai August 2020 Resume.pdf" target="_blank" class="mx-1">
 			<i class="fa fa-file-text"> </i>
 			</a>
 		</li>
