--- a/work.html
+++ b/work.html
@@ -231,7 +231,7 @@
 					</a>
 				</li>
 				<li class="list-inline-item">
-					<a href="https://drive.google.com/file/d/1kgZ-wXe9-ajS6LQJBJ_fdkdvkINd8y_w/view?usp=sharing" target="_blank" class="mx-1">
+					<a href="Jennifer Tsai August 2020 Resume.pdf" target="_blank" class="mx-1">
 					<i class="fa fa-file-text"> </i>
 					</a>
 				</li>
