changed resume file name

--- a/gallery.html
+++ b/gallery.html
@@ -316,7 +316,7 @@
 					</a>
 				</li>
 				<li class="list-inline-item">
-					<a href="Jennifer Tsai August 2020 Resume.pdf" target="_blank" class="mx-1">
+					<a href="Jennifer-Tsai-Resume-Aug2020.pdf" target="_blank" class="mx-1">
 					<i class="fa fa-file-text"> </i>
 					</a>
 				</li>
