--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<a href="about.html" class="more-about-me-btn btn" role="button">more about me</a>
 								</div>
 								<div class="mx-2 center">
-									<a href="Jennifer Tsai August 2020 Resume.pdf" target="_blank" class="resume-btn btn" role="button">get my resume</a>
+									<a href="Jennifer-Tsai-Resume-Aug2020.pdf" target="_blank" class="resume-btn btn" role="button">get my resume</a>
 								</div>
 							</div>
 						</div>
@@ -327,7 +327,7 @@
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="Jennifer Tsai August 2020 Resume.pdf" target="_blank" class="mx-1">
+						<a href="Jennifer-Tsai-Resume-Aug2020.pdf" target="_blank" class="mx-1">
 						<i class="fa fa-file-text"> </i>
 						</a>
 					</li>
