updated to include new blog and projects

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="blog.html">my life</a>
+							<a class="nav-link" href="https://www.notion.so/my-jen-unine-thoughts-cab48d9043c34c3882e4786b187f98c9" target="_blank">blog</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
@@ -105,7 +105,7 @@
 			</div>
 			<div class="mission"> 
 				<div class="inner">
-					<h3><br><span class="highlight-orange">I'm on a mission to leverage technology to revolutionize how we understand and treat brain & mental health, to ultimately create a more accessible and inclusive world.</span></h3>
+					<h3><br><span class="highlight-orange">I'm on a mission to leverage technology to revolutionize the systems that govern healthcare and society, to ultimately create a more accessible and inclusive world.</span></h3>
 					<h3>
 						
 					</h3>
@@ -144,7 +144,7 @@
 			</a>
 		</li>
 		<li class="list-inline-item">
-			<a href="Jennifer-Tsai-Resume-Aug2020.pdf" target="_blank" class="mx-1">
+			<a href="Jennifer_Tsai_Resume.pdf" target="_blank" class="mx-1">
 			<i class="fa fa-file-text"> </i>
 			</a>
 		</li>
