--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="blog.html">my life</a>
+							<a class="nav-link" href="https://www.notion.so/my-jen-unine-thoughts-cab48d9043c34c3882e4786b187f98c9" target="_blank">blog</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
@@ -316,7 +316,7 @@
 					</a>
 				</li>
 				<li class="list-inline-item">
-					<a href="Jennifer-Tsai-Resume-Aug2020.pdf" target="_blank" class="mx-1">
+					<a href="Jennifer_Tsai_Resume.pdf" target="_blank" class="mx-1">
 					<i class="fa fa-file-text"> </i>
 					</a>
 				</li>
