--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="blog.html">my life</a>
+							<a class="nav-link" href="https://www.notion.so/my-jen-unine-thoughts-cab48d9043c34c3882e4786b187f98c9" target="_blank">blog</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
@@ -79,14 +79,14 @@
 							<p>
 								I'm Jenn, a neuroscience researcher, aspiring health tech innovator & philanthropist, and an old soul at heart. Based in Vancouver, I am currently calling the (virtual) University of Waterloo home, where I am pursuing my first year of Honours Biomedical Engineering.
 								<br><br>
-								I'm interested in leveraging technology to shift how we currently understand and treat brain health, to ultimately empower those living with long-term disabilities. Things I am just as passionate about are creative engineering design, accessible healthcare, climate action, and the use of storytelling to bring light to important social issues. Outside of work, I am an avid reader, runner, and sunset chaser!
+								I'm interested in leveraging technology to bridge the world's inequalities, particularly in the areas of healthcare and social justice. Things I am just as passionate about are creative engineering design, social entrepreneurship, climate action, and the use of storytelling to bring light to important world issues. Outside of work, I am an avid reader, runner, and sunset chaser!
 							</p>
 							<div class="about-me-buttons btn-toolbar ">
 								<div class="mx-2 center">
 									<a href="about.html" class="more-about-me-btn btn" role="button">more about me</a>
 								</div>
 								<div class="mx-2 center">
-									<a href="Jennifer-Tsai-Resume-Aug2020.pdf" target="_blank" class="resume-btn btn" role="button">get my resume</a>
+									<a href="Jennifer_Tsai_Resume.pdf" target="_blank" class="resume-btn btn" role="button">get my resume</a>
 								</div>
 							</div>
 						</div>
@@ -122,7 +122,7 @@
 									<h6 class="card-focus">Health & Tech / Research, Data Analysis, Neuroscience</h6>
 									<h5 class="card-title">investigating brain tech @ healthtech connex inc. </h5>
 									<p class="card-text">Falling in love with an innovative, collaborative environment that I always dreamed to find. Diving deep into crazy new technologies to help people walk again and rehabilitate from brain disorders.</p>
-									<a href="https://healthtechconnex.com/" target="_blank" class="card-link mt-auto">Learn More</a>
+									<a href="https://www.notion.so/Working-at-Surrey-s-Health-Technology-District-8c994d8c840043bf8424052d417d6efa" target="_blank" class="card-link mt-auto">Read Blog Post</a>
 								</div>
 							</div>
 						</div>
@@ -131,7 +131,7 @@
 								<img class="card-img-top" src="images/projects-reflect.png" alt="computer screen mockup with reflect logo and blue blobs">
 								<div class="card-body d-flex flex-column">
 									<h6 class="card-focus">Health & Tech / Web Dev, Product Dev, UI/UX</h6>
-									<h5 class="card-title">reflect - a digitally mindful website blocker </h5>
+									<h5 class="card-title">reflect - website blocker for digital well-being and mindfulness</h5>
 									<p class="card-text">Four friends from across North America come together to create a web extension that helps people focus on their work in the digital space, with a more mindful twist. Available now on the Chrome and Firefox store!</p>
 									<a href="https://getreflect.app/" target="_blank" class="card-link mt-auto">View project</a>
 								</div>
@@ -327,7 +327,7 @@
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="Jennifer-Tsai-Resume-Aug2020.pdf" target="_blank" class="mx-1">
+						<a href="Jennifer_Tsai_Resume.pdf" target="_blank" class="mx-1">
 						<i class="fa fa-file-text"> </i>
 						</a>
 					</li>
