--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="blog.html">my life</a>
+							<a class="nav-link" href="https://www.notion.so/my-jen-unine-thoughts-cab48d9043c34c3882e4786b187f98c9" target="_blank">blog</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
@@ -65,10 +65,10 @@
 							<div class="card h-100">
 								<img class="card-img-top" src="images/projects-htc.png" alt="scientist helping patient with an eeg cap">
 								<div class="card-body d-flex flex-column">
-									<h6 class="card-focus">July 2019-Now • Research, Data Analysis, Neuroscience</h6>
+									<h6 class="card-focus">July 2019-August 2020 • Research, Data Analysis, Neuroscience</h6>
 									<h5 class="card-title">investigating brain tech @ healthtech connex inc. </h5>
 									<p class="card-text">Falling in love with an innovative, collaborative environment that I always dreamed to find. Diving deep into crazy new technologies to help people walk again and rehabilitate from brain disorders.</p>
-									<a href="https://healthtechconnex.com/" target="_blank" class="card-link mt-auto">Learn More</a>
+									<a href="https://www.notion.so/Working-at-Surrey-s-Health-Technology-District-8c994d8c840043bf8424052d417d6efa" target="_blank" class="card-link mt-auto">Read Blog Post</a>
 								</div>
 							</div>
 						</div>
@@ -77,7 +77,7 @@
 								<img class="card-img-top" src="images/projects-reflect.png" alt="computer screen mockup with reflect logo and blue blobs">
 								<div class="card-body d-flex flex-column">
 									<h6 class="card-focus">November 2019-Now • Web Dev, Product Dev, UI/UX</h6>
-									<h5 class="card-title">reflect - a digitally mindful website blocker </h5>
+									<h5 class="card-title">reflect - a website blocker for digital well-being and mindfulness</h5>
 									<p class="card-text">Four friends from across North America come together to create a web extension that helps people focus on their work in the digital space, with a more mindful twist. Available now on the Chrome and Firefox store!</p>
 									<a href="https://getreflect.app/" target="_blank" class="card-link mt-auto">View project</a>
 								</div>
@@ -106,18 +106,31 @@
 									<a href="https://www.oscms-bc.ca/" target="_blank" class="card-link mt-auto">Learn More</a>
 								</div>
 							</div>
-                        </div>
-                        <div class="col-md-4 my-3">
+						</div>
+						<div class="col-md-4 my-3">
 							<div class="card h-100">
-								<img class="card-img-top" src="images/projects-futureshot-website.png" alt="futureshot factory logo">
+								<img class="card-img-top" src="images/projects-painfreeg.png" alt="futureshot factory logo">
 								<div class="card-body d-flex flex-column">
-									<h6 class="card-focus">July 2020-Now • Web Dev,  UX/UI</h6>
-									<h5 class="card-title">revamping futureshot factory’s company website</h5>
-									<p class="card-text">Furthering my newfound interest in web design, exploring tools like WebFlow. Creating new colour templates, coming up with creative ways to display our work, and building the site from the ground up!</p>
+									<h6 class="card-focus">July 2020-Now • Neuroscience, AI, Research</h6>
+									<h5 class="card-title">cortech: waterloo’s neurotech student design team</h5>
+									<p class="card-text">Furthering my interest in neuroscience, I joined a team of students with alike interests to improve the well-being of people through neurotechnology. So far, I've help prototype an EEG-based pain monitoring system to allow for physicians to better administer opiod drugs to patients, at MedHacks @John Hopkins University.</p>
+									<a href="https://devpost.com/software/pain-freeg " target="_blank" class="card-link mt-auto">View project</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 my-3">
+							<div class="card h-100">
+								<img class="card-img-top" src="images/projects-bme-design.png" alt="design of weighing scale system">
+								<div class="card-body d-flex flex-column">
+									<h6 class="card-focus">September 2020-Now • Design Thinking, Engineering</h6>
+									<h5 class="card-title">designing a better weight management system for individuals with SCI</h5>
+									<p class="card-text">Currently, there are no universal and user-friendly solutions to allow wheelchair users with spinal cord injury - a population most prone to obesity issues - manage their weight independently at home. In my design course, my team tackled this problem space through the iterative design process.</p>
 									<!-- <a href="#" class="card-link mt-auto">View project</a> -->
 								</div>
 							</div>
-                        </div>
+						</div>
+						
+
                     </div> <!-- /.row -->
                     
                 </div>  <!-- /.health-tech -->
@@ -237,7 +250,7 @@
 					</a>
 				</li>
 				<li class="list-inline-item">
-					<a href="Jennifer-Tsai-Resume-Aug2020.pdf" target="_blank" class="mx-1">
+					<a href="Jennifer_Tsai_Resume.pdf" target="_blank" class="mx-1">
 					<i class="fa fa-file-text"> </i>
 					</a>
 				</li>
