added meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Jennifer Tsai</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="A personal portfolio for Jennifer Tsai, a creative problem-solver, neuroscience geek, and Biomedical Engineering student at the University of Waterloo.">
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">		
 		<link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
