minimalizing the site

--- a/about.html
+++ b/about.html
@@ -14,38 +14,12 @@
 		<!-- Icons -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="icon" href="images/icon.png">
+		<script src="components/footer.js" type="text/javascript" defer></script>
+		<script src="components/header.js" type="text/javascript" defer></script>
 	</head>
 	<body>
 		<div class="splash">
-			<!-- NavBar -->
-			<nav class="navbar navbar-expand-md fixed-top">
-				<!-- Logo -->
-				<a class="navbar-brand" href="index.html"><img class="logo img-fluid" src="images/personal-logo.png" alt="personal logo with 'jenn' and a peach underline"></a>
-				<!-- Toggler -->
-				<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<!-- Links -->
-				<div class="collapse navbar-collapse" id="main-navigation">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="about.html">about</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="work.html">my work</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="https://www.notion.so/my-jen-unine-thoughts-cab48d9043c34c3882e4786b187f98c9" target="_blank">blog</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="gallery.html">gallery</a>
-						</li>
-					</ul>
-				</div>
-            </nav>
+		<header-component></header-component>
 		</div> <!-- .splash -->
 		<div class="about-me">
 			<div class="inner">
