--- a/writing.html
+++ b/writing.html
@@ -68,17 +68,12 @@
     <div class="about">
       <div class="hello">
         <div class="inner">
-          <div class="row">
-            <about-component></about-component>
-          </div>
-          <!-- /.row -->
+            <h1>Coming soon!!</h1>
         </div>
         <!-- /.inner -->
       </div>
       <!-- /.hello -->
 
-      <!-- Footer -->
-      <footer-component></footer-component>
     </div>
     <!-- .about -->
     <!-- Including JQuery & Load Bootstrap Javascript -->
